--- a/main.css
+++ b/main.css
@@ -147,6 +147,13 @@ body {
     right: 30%;
 }
 
+.balloon3 {
+    right: 42%;
+    top: 45%;
+    height: 250px;
+    width: 250px;
+}
+
 .bannerParty {
     position: absolute;
     left: 50%;
@@ -366,11 +373,9 @@ transform: translate(-50%, 0);max-width: 100%;
     .balloon2 {
         right: 30px;
     }
+
     .balloon3 {
-        top: 350px;
-        right: 240px;
-        width:250px;
-        height:250px;
+        right: 50%;
     }
 
     .content {
